--- a/csv/pom.xml
+++ b/csv/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.havlikmar</groupId>
-  <artifactId>format</artifactId>
+  <artifactId>csv</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -47,7 +47,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.github.havlikmar.format.App</mainClass>
+                            <mainClass>com.github.havlikmar.csv.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
