--- a/csvm/pom.xml
+++ b/csvm/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.havlikmar</groupId>
-  <artifactId>csv</artifactId>
+  <artifactId>csvm</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>format</name>
+  <name>csvm</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
     
@@ -34,7 +34,7 @@
   		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
   </dependencies>
-      
+  
   <build>
 		<plugins>            
             <plugin>
