--- a/konvertor_bakalarska_prace/pom.xml
+++ b/konvertor_bakalarska_prace/pom.xml
@@ -29,6 +29,12 @@
 	</dependency>
 	
 	<dependency>
+   		<groupId>com.github.havlikmar</groupId>
+  		<artifactId>csvm</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
+	
+	<dependency>
 		<groupId>com.opencsv</groupId>
 		<artifactId>opencsv</artifactId>
 		<version>4.5</version>
@@ -49,6 +55,7 @@
              <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.1</version>
                 <configuration>
                     <archive>
                         <manifest>
